[package]
name = "present"
version = "0.2.2"
description = "Interpolate the standard output of arbitrary shell scripts into your markdown files"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/present"
repository = "https://github.com/terror/present"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "utility", "markdown", "bash"]
resolver = "2"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
console = "0.15.2"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
ropey = "1.5.0"
similar = "2.2.0"
snafu = { version = "0.7.1", default-features = false, features = ["std"] }
termimad = "0.20.3"
walkdir = "2.3.2"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.3.0"
tempdir = "0.3.7"
unindent = "0.1.10"
