[package]
name = "present"
version = "0.2.3"
description = "Interpolate the standard output of arbitrary shell scripts into your markdown files"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/present"
repository = "https://github.com/terror/present"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "utility", "markdown", "bash"]
resolver = "2"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
console = "0.15.11"
pulldown-cmark = { version = "0.9.6", default-features = false, features = ["simd"] }
ropey = "1.6.1"
similar = "2.7.0"
snafu = { version = "0.7.5", default-features = false, features = ["std"] }
termimad = "0.20.6"
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.4.1"
tempdir = "0.3.7"
unindent = "0.1.11"
